--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@material-ui/icons": "^1.1.0",
     "history": "^4.7.2",
     "lodash.throttle": "^4.1.1",
-    "node-sass-chokidar": "^0.0.3",
+    "node-sass-chokidar": "^1.3.5",
     "normalize": "^0.3.1",
     "prettier": "^1.10.2",
     "react": "^16.2.0",
@@ -18,10 +18,11 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-youtube": "^7.5.0",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "typescript": "^3.5.1"
   },
   "devDependencies": {
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
